--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,9 @@
     "description": "Laravel package to create dynamic panels",
     "type": "library",
     "require": {
-        "php": "^7.4 || ^8.0",
-        "spatie/laravel-package-tools": "^1.11",
-        "illuminate/config": "^8.0 || ^9.0",
-        "illuminate/support": "^8.0 || ^9.0",
-        "livewire/livewire": "^2.5"
+        "php": "^8.0",
+        "spatie/laravel-package-tools": "^1.14",
+        "livewire/livewire": "^2.10"
     },
     "license": "MIT",
     "autoload": {
@@ -27,5 +25,11 @@
                 "TwentySixB\\LaravelDynamicPanels\\DynamicPanelsServiceProvider"
             ]
         }
+    },
+    "suggest": {
+
+    },
+    "require-dev": {
+        "orchestra/testbench": "^8.0"
     }
 }
